--- a/site/views/index.hbs
+++ b/site/views/index.hbs
@@ -64,7 +64,7 @@
 <!--                         <li class="scroll"><a href="#pricing">Pricing</a></li>
                         <li class="scroll"><a href="#blog">Blog</a></li>
  -->                    <li class="scroll"><a href="#get-in-touch">Contact</a></li>
-                        <li class="scroll"><a href="http://www.collectivefoods.com" target="/blank">Login</a></li>
+                        <li class="scroll"><a href="https://www.collectivefoods.com" target="/blank">Login</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
